# MITK-Workshop-Project

Modules/: ModuleList.cmake
Modules/Example3/: CMakeLists.txt  README.md
Modules/Example3/cmdapps/: CMakeLists.txt
Modules/Example3/include/: ExampleImageInverter.h
Modules/Example4/: CMakeLists.txt
Modules/Example4/cmdapps/: CMakeLists.txt  CaPTkExample4CmdApp.cpp
Modules/Example5/: CMakeLists.txt  README.md  files.cmake
Modules/Example5/cmdapps/: CMakeLists.txt  Example5PythonCmdApp.cpp
Modules/Example5/include/: ExamplePythonImageInverter.h
Modules/Example5/resources/: QExamplePython.qrc  invertImage.py
Modules/Example5/src/: ExamplePythonImageInverter.cpp
Modules/ExampleImageInverter/: CMakeLists.txt  README.md  files.cmake
Modules/ExampleImageInverter/cmdapps/: CMakeLists.txt  (+1 more)
Modules/ExampleInverter/: CMakeLists.txt  files.cmake
Modules/ExampleInverter/include/: ExampleInverter.h
Modules/ExampleInverter/src/: ExampleInverter.cpp
Modules/ExamplePythonInvoker/: CMakeLists.txt  README.md  files.cmake
Modules/ExamplePythonInvoker/cmdapps/: CMakeLists.txt  ExamplePythonInvokerCmdApp.cpp
Modules/ExamplePythonInvoker/include/: ExamplePythonInvoker.h
Modules/ExamplePythonInvoker/resources/: ProcessImage.py  sample_module.py  sample_script.py
Modules/ExamplePythonInvoker/resources/some_python_subdirectory/: super-important-text-file.txt
Modules/ExamplePythonInvoker/src/: ExamplePythonInvoker.cpp
Modules/ExamplePythonInvoker/test/: CMakeLists.txt  files.cmake  mitkExamplePythonInvokerTest.cpp
Plugins/: PluginList.cmake
Plugins/upenn.cbica.captk.example3/: CMakeLists.txt  README.md  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/upenn.cbica.captk.example4/: CMakeLists.txt  README.md  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/upenn.cbica.captk.example5/: CMakeLists.txt  README.md  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/upenn.cbica.captk.examplepy/: CMakeLists.txt  README.md  files.cmake  manifest_headers.cmake  plugin.xml
(+23 files in other folders)
